# Specify pkg name, version, number and bug reports addrs.
C_INIT([blackship], [1.0], [hoenirvili@gmail.com])
# Turn on all Automake warnings and report them as errors. This is a foreign pkg.
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
# Check for a C compiler
AC_PROG_CC
# Declare config.h output header
AC_CONFIG_HEADERS([config.h])
# Declare makefile and src/Makefile as output header
AC_CONFIG_FILES([Makefile src/Makefile])
# Actully output all declared files
AC_OUTPUT
